After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 794089 - power: Fix crash when panel is closed quickly
power: Fix crash when panel is closed quickly
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Power
unspecified
Other All
: Normal normal
: ---
Assigned To: Richard Hughes
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-03-05 15:17 UTC by Benjamin Berg
Modified: 2018-03-05 15:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
power: Fix crash when panel is closed quickly (1.80 KB, patch)
2018-03-05 15:17 UTC, Benjamin Berg
committed Details | Review

Description Benjamin Berg 2018-03-05 15:17:36 UTC
Fix a use-after-free while creating the dbus proxy for
org.gnome.SettingsDaemon.Power.Keyboard. This fix is identical to the
previous fix for the screen proxy.
Comment 1 Benjamin Berg 2018-03-05 15:17:40 UTC
Created attachment 369350 [details] [review]
power: Fix crash when panel is closed quickly
Comment 2 Bastien Nocera 2018-03-05 15:45:18 UTC
Review of attachment 369350 [details] [review]:

Correct.
Comment 3 Georges Basile Stavracas Neto 2018-03-05 15:46:14 UTC
Review of attachment 369350 [details] [review]:

++
Comment 4 Bastien Nocera 2018-03-05 15:48:58 UTC
Attachment 369350 [details] pushed as 1d72a0b - power: Fix crash when panel is closed quickly